--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-'Hello WOrld' 
+<html>
+<head>
+	<title>IPME</title>
+</head>
+<body>
+	<marquee><strong>Le site de l'an 2000 !!! </strong></marquee>
+</body>
+</html>
